# fs-lenses

./: CLAUDE.md  Cargo.toml  README.md  build.rs  package.toml
assets/i18n/: de.toml  en.toml
proto/: lens.proto
src/: app.rs  cli.rs  controller.rs  grpc.rs  keys.rs  lib.rs  main.rs  model.rs  query.rs  registry.rs  rest.rs  search.rs  view.rs
tests/: lens_test.rs
