[package]
name        = "fs-lenses"
description = "FreeSynergy – Lenses: aggregated cross-service data views"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-lenses"

[lib]
name = "fs_lenses"
path = "src/lib.rs"

[[bin]]
name = "fs-lenses"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fs-components/desktop"]
web      = ["dioxus/web",     "fs-components/web"]

[dependencies]
fs-components = { path = "../fs-components" }
fs-i18n       = { path = "../fs-i18n", features = ["dioxus"] }
dioxus        = { version = "0.7.3", default-features = false, features = ["macro", "html", "signals", "hooks", "launch"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
chrono        = { version = "0.4", features = ["serde"] }
reqwest       = { version = "0.13", features = ["json", "rustls"], default-features = false }

# ── Local patches ─────────────────────────────────────────────────────────────
# Keep in sync with fs-desktop patch.
[patch.crates-io]
dioxus-desktop = { path = "../fs-desktop/vendor/dioxus-desktop" }
