[package]
name        = "fs-lenses"
description = "FreeSynergy Desktop – Lenses: aggregated cross-service data views"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-lenses"

[lib]
name = "fs_lenses"
path = "src/lib.rs"

[[bin]]
name = "fs-lenses"
path = "src/main.rs"

[dependencies]
fs-render = { path = "../fs-render" }
fs-i18n   = { path = "../fs-i18n" }
fs-error  = { path = "../fs-libs/fs-error" }
fs-bus    = { path = "../fs-bus" }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono     = { version = "0.4", features = ["serde"] }

uuid               = { version = "1", features = ["v4"] }
async-trait        = "0.1"
thiserror          = "2"
tracing            = "0.1"
tokio              = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# REST + OpenAPI
axum              = "0.7"
utoipa            = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower-http        = { version = "0.6", features = ["trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
